# PigSyntheticData

./: licence.md
Plugins/unrealgt_ue5.4/: README.md  UnrealGT.uplugin
Plugins/unrealgt_ue5.4/Content/: DepthEffectMaterial.uasset  PP_DepthPerspective.uasset  QPSActive_parkedMSCamera.csv  epieos_1723494358_+436607925256.json
Plugins/unrealgt_ue5.4/Content/Examples/: DEpth.uasset  GettingStarted.uasset  Segmentation.uasset
Plugins/unrealgt_ue5.4/Content/MaterialFunctions/: Depthto32bit.uasset  MF_UnpackDepth32New.uasset  UnpackDepth32bit.uasset
Plugins/unrealgt_ue5.4/Source/UnrealGT/: UnrealGT.Build.cs
Plugins/unrealgt_ue5/Content/Examples/: DEpth.uasset  GettingStarted.uasset
Post-Processing/src/Pointcloud-cuda/: CMakeLists.txt  kernels.cu  kernels.h  main.cpp
Post-Processing/src/python/: Jointcudafinal.py  hemisphere.py  npytext.py  pillowdepth.py  processfolders.py  yolodataset.py
Saved/Autosaves/Game/Blueprints/: BP_SkeletonVisualizer_Auto0.uasset  BP_SkeletonVisualizer_Auto1.uasset  BP_SkeletonVisualizer_Auto2.uasset  (+7 more)
Source/: CameraPoseCalc.Target.cs  CameraPoseCalcEditor.Target.cs
Source/CameraPoseCalc/: CameraPoseCalc.Build.cs  CameraPoseCalc.cpp  CameraPoseCalcCharacter.cpp  CameraPoseCalcCharacter.h  CameraPoseCalcGameMode.cpp  CameraPoseCalcGameMode.h  CameraPoseCalcProjectile.cpp  CameraPoseCalcProjectile.h  TP_PickUpComponent.cpp  TP_PickUpComponent.h  TP_WeaponComponent.cpp  TP_WeaponComponent.h
Source/CameraPoseCalc/Private/: ActorMoverComponent.cpp  PoseUpdateder.cpp
Source/CameraPoseCalc/Public/: ActorMoverComponent.h  PoseUpdateder.h
(+47 files in other folders)
